<resources>
    <string name="app_name">Eleme</string>
    <string name="title_activity_login">Login</string>
    <string name="_22_duong_so_147_phuoc_long_b_quan_9_thanh_pho_ho_chi_minh">22, Duong so 147, Phuoc Long B, Quan 9, Thanh Pho Ho Chi Minh</string>
    <string name="sort_by"> Sort by:</string>
    <string name="facebook_app_id">283740247620840</string>
    <string name="default_web_client_id">23209393665-9ml2662fsia935p4b0a2nkdu3ru4p9j3.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelordermsg">We will continue to improve our service and satisfy you on the next order.</string>
    <string name="cancelorderPopup">We are so sad about your cancellation</string>
    <string name="txtEditAddress">Edit Address</string>
    <string name="TxtViewName">Name</string>
    <string name="txtPhoneNumber">Phone number</string>
    <string name="txtCity">City</string>
    <string name="txtDistrict">District</string>
    <string name="txtWard">Ward</string>
    <string name="txtStreet">Street</string>
    <string name="edtStreet">12 Phan Dinh Phung</string>
    <string name="txtcheckbox">Set as Default Address</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="please_select_the_reason_for_cancellation">Please select the reason for cancellation:</string>
    <string name="waiting_for_long_time">Waiting for long time</string>
    <string name="unable_to_contact_driver">Unable to contact driver</string>
    <string name="driver_denied_to_go_to_destination">Driver denied to go to destination</string>
    <string name="driver_denied_to_come_to_pickup">Driver denied to come to pickup</string>
    <string name="wrong_address_shown">Wrong address shown</string>
    <string name="i_want_to_order_another_restaurant">I want to order another restaurant</string>
    <string name="i_just_want_to_cancel">I just want to cancel</string>
    <string name="others">Others</string>
    <string name="other_reasons">Other reasons...</string>
    <string name="submit">Submit</string>
    <string name="change_email">Change email</string>
    <string name="you_will_receive_important_updates_or_reset_password_by_this_email">You will receive important updates or reset password by this email</string>
    <string name="enter_email">Enter email</string>
    <string name="save">Save</string>
    <string name="change_name">Change name</string>
    <string name="name">Name</string>
    <string name="nguyen_van_a">Nguyen Van A</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="please_enter_your_phone_number_to_receive_a_verification_code">Please enter your phone number to receive a verification code</string>
    <string name="phone_number">Phone Number</string>
    <string name="resend_verification_code">Resend verification code:</string>
    <string name="resend">Resend</string>
    <string name="send">Send</string>
    <string name="my_address">My Address</string>
    <string name="address">Address</string>
    <string name="add_new_address">+ Add new address</string>
    <string name="my_orders">My Orders</string>
    <string name="new_address">New Address</string>
    <string name="_0999">0999</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="street">Street</string>
    <string name="abcxyz">ABCXYZ</string>
    <string name="set_as_default_address">Set as Default Address</string>
    <string name="new_password">New password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="shaking_beef_tri_tip">Shaking Beef Tri-tip</string>
    <string name="seach_dish_name_restaurant">Search dish name, restaurant</string>
    <string name="see_reviews">See reviews</string>
    <string name="_21520756_gm_uit_edu_vn">21520756@gm.uit.edu.vn</string>
    <string name="language">Language</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="terms_of_use_text">USER TERMS OF USE\n\nI. Definitions and Interpretation\nELEME application ("ELEME") is a mobile application providing e-commerce platform food delivery service, operated by ELEME DEVELOPER STUDENT GROUP ("Group"). The application helps to connect food providers, delivery service providers, and those who need to use food delivery service ("Service")\n\nCustomers: are individuals and organizations requesting to use food delivery service using ELEME to post a notice of demand for food delivery to purchase\n\nRiders: are food delivery service providers using ELEME to connect with customers and the restaurants\n\nRestaurants: are individuals and organizations listed on ELEME, with or without the demand of advertising and selling food, who may provide the food that Customers request\n\nUsers: are individuals and organizations registering to use ELEME Application\n\nFood delivery service: is a food delivery service traded through ELEME\n\nIntellectual property: is any patent, copyright, registered or unregistered design, rights to the design, registered or unregistered trademarks, service marks or public ownership, industrial or other intellectual property, including applications for any of the above.\n\nII. General Regulations\nApplication name of E-commerce trading floor service provider: ELEME\nThe Users are individuals, organizations, having demand for ordering food/drink online. The users must register in accordance with legal regulations and be recognized by Management of ELEME DEVELOPER STUDENT GROUP.\nFood dealt on ELEME meets full conditions on food safety and regulations.\nRestaurants are completely responsible for all services and products supplied by themselves to Customers, which are already ordered through use of the services provided by ELEME.\nWhen Users and/or Restaurants access ELEME to demand, request, or/and provide Service, User and/or Restaurant already agree to comply with and be bound by the regulations on ELEME operation.\nUpon taking part in ELEME, Users and Restaurants must learn about their legal responsibilities under Vietnam’s current laws by themselves and commit to their responsibilities in the Regulation of ELEME.\nIII. Installation, Registration &amp; Transaction\nInstallation Process:\nStep 1: Download and install ELEME Application depending on the device you are using\nStep 2: Once downloaded successfully click ELEME Application to start\nStep 3: For the first time of opening ELEME Application, the Application will request to click allow for sending notification and having access to the user’s location. Press "Allow" to continue.\nRegistration Process:\nStep 1: Click at the top-right corner of the Application to move to Login page\nStep 2: Choose either "Connect with Mobile Number" or "Connect with Facebook" depending on the preference\nStep 2a-1: (for Connect with Mobile Number): Enter currently using a mobile phone number, and then press "next" to receive a verification number\nStep 2a-2: Enter Name, E-mail address, desired password\nStep 2b-1: (for Connect with Facebook): Press "Continue" when the Application asks "ELEME" wants to use "facebook.com" to sign in\nStep 2b-2: Press "Continue as [name]"\nStep 2b-3: Enter currently using a mobile phone number, and then press "next" to receive a verification number\nStep 2b-4: Enter the received verification number\nStep 2b-5: Enter Name, E-mail address, desired password.</string>
    <string name="order_detail">Order detail</string>
    <string name="log_in">Log In</string>
    <string name="startting_date_title">Starting Date</string>
    <string name="email_title">Email</string>
    <string name="language_title">Language</string>
    <string name="InformationHeader">Information</string>
    <string name="orderTitleMainRestaurant">Order</string>
    <string name="nameTitleRestaurant">Name</string>
    <string name="phoneNumberTitleRestaurant">Phone number</string>
    <string name="addressTitleRestaurant">Address</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="addressRestaurantProfile">Address</string>
    <string name="confirmRestaurantProfile">Confirm</string>
    <string name="logOutRestaurantProfile">Log out</string>
    <string name="nameTitleRestaurantProfile">Name</string>
    <string name="orderTitleAcceptOrder">Order</string>
    <string name="msg_accept_this_order">Accept this order</string>
    <string name="msg_subtotal">Subtotal</string>
    <string name="msg_service_fees">Service fees:</string>
    <string name="msg_delivery_fees">Delivery fees:</string>
    <string name="msg_total">Total</string>
    <string name="msg_images">Images</string>
    <string name="msg_add_menu">Add menu</string>
    <string name="msg_name">Name</string>
    <string name="msg_add_image">Add Image</string>
    <string name="msg_size">Size</string>
    <string name="msg_price">Price</string>
    <string name="msg_add_topping">Add Topping</string>
    <string name="msg_confirm">Confirm</string>
    <string name="msg_add_new">Add new</string>
    <string name="msg_please_check_your_inbox_for_a_confirmation_email_click_the_link_in_the_email_to_confirm_your_email_address">Please check your inbox for a confirmation email. Click the link in the email to confirm your email address.</string>
    <string name="msg_confirm_your_email">Confirm your email!</string>
    <string name="msg_re_send_confirmation_email">Re-send confirmation email</string>
    <string name="msg_cancel_order">Cancel Order</string>
    <string name="msg_please_select_the_reason_for_cancellation">Please select the reason for cancellation:</string>
    <string name="msg_waiting_for_long_time">Waiting for long time</string>
    <string name="msg_unable_to_contact_driver">Unable to contact driver</string>
    <string name="msg_driver_denied_to_go_to_destination">Driver denied to go to destination</string>
    <string name="msg_driver_denied_to_come_to_pickup">Driver denied to come to pickup</string>
    <string name="msg_wrong_address_shown">Wrong address shown</string>
    <string name="msg_i_just_want_to_cancel">I just want to cancel</string>
    <string name="msg_i_want_to_order_another_restaurant">I want to order another restaurant</string>
    <string name="msg_others">Others</string>
    <string name="msg_other_reasons">Other reasons...</string>
    <string name="msg_submit">Submit</string>
    <string name="msg_change_email">Change email</string>
    <string name="msg_save">Save</string>
    <string name="msg_change_name">Change name</string>
    <string name="msg_change_phone_number">Change phone number</string>
    <string name="msg_please_enter_your_phone_number_to_receive_a_verification_code">Please enter your phone number to receive a verification code</string>
    <string name="msg_phone_number">Phone Number</string>
    <string name="msg_happy_meals">Happy Meals!</string>
    <string name="msg_order_from_your_favourite_restaurants_and_takeaways_within_the_matter_of_seconds">Order from your favourite restaurants and takeaways within the matter of seconds.</string>
    <string name="msg_get_started">Get Started</string>
    <string name="msg_last_edited_20_april_2024">Last edited: 20 April 2024</string>
    <string name="msg_terms_and_conditions">Terms and Conditions</string>
    <string name="msg_my_account">My Account</string>
    <string name="msg_my_order">My Order</string>
    <string name="msg_save_places">Save Places</string>
    <string name="msg_my_favorites">My Favorites</string>
    <string name="msg_payment_management">Payment Management</string>
    <string name="msg_term_and_condition">Term And Condition</string>
</resources>