<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_0">
        <item
            android:id="@+id/myAccount"
            android:title="@string/msg_my_account" />
    </group>
    <group android:id="@+id/group_1">
        <item
            android:id="@+id/myOrder"
            android:title="@string/msg_my_order" />
        <item
            android:id="@+id/myFavorites"
            android:title="@string/msg_my_favorites" />
        <item
            android:id="@+id/savePlaces"
            android:title="@string/msg_save_places" />
    </group>
    <group android:id="@+id/group_2">
        <item
            android:id="@+id/paymentManagement"
            android:title="@string/msg_payment_management" />
        <item
            android:id="@+id/termAndCondition"
            android:title="@string/msg_term_and_condition" />
    </group>

</menu>
