<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whiteedt"
    android:gravity="start">

    <LinearLayout
        android:id="@+id/backwardGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backward"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_order"
            android:textSize="35sp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textFontWeight="900"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_the_reason_for_cancellation"
        android:fontFamily="@font/lato_regular"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/backwardGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <View
        android:layout_width="370dp"
        android:layout_height="1dp"
        android:layout_below="@id/subtitle"
        android:layout_centerHorizontal="true"
        android:background="@color/lightgray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>

    <RadioGroup
        android:id="@+id/reasonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:orientation="vertical"
        android:layout_marginTop="35dp">

        <RadioButton
            android:id="@+id/reason1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting_for_long_time"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:button="@drawable/radio_button_background"/>

        <RadioButton
            android:id="@+id/reason2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/unable_to_contact_driver"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:button="@drawable/radio_button_background"/>

        <RadioButton
            android:id="@+id/reason3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/driver_denied_to_go_to_destination"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:button="@drawable/radio_button_background"/>

        <RadioButton
            android:id="@+id/reason4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/driver_denied_to_come_to_pickup"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:button="@drawable/radio_button_background"/>
        <RadioButton
            android:id="@+id/reason5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/wrong_address_shown"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:button="@drawable/radio_button_background"/>
        <RadioButton
            android:id="@+id/reason6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/i_want_to_order_another_restaurant"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:button="@drawable/radio_button_background"/>
        <RadioButton
            android:id="@+id/reason7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/i_just_want_to_cancel"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:button="@drawable/radio_button_background"/>
        <RadioButton
            android:id="@+id/reason8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/others"
            android:paddingStart="10dp"
            android:textSize="17sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:button="@drawable/radio_button_background"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/otherReason"
        android:layout_height="wrap_content"
        android:layout_below="@id/reasonGroup"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextLogin"
            android:id="@+id/otherReasonInput"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:hint="@string/other_reasons"
            android:inputType="text"
            android:gravity="top"
            android:lineHeight="@dimen/margin_large"
            android:textColorHighlight="@color/primary"
            android:textColorHint="@color/whiteedt"
            android:textColorLink="@color/primary" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        style="@style/SaveButton"/>

</RelativeLayout>