<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteedt"
        android:gravity="start">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="73dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/ProfileTitle"
            style="@style/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="63dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/profile"
            android:textColor="@color/lightdark"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/ProfilePicture"
            android:layout_width="141.58dp"
            android:layout_height="141.58dp"
            android:layout_below="@+id/ProfileTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_large"
            android:src="@drawable/profile_picture" />

        <TextView
            android:id="@+id/NameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ProfilePicture"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/name"
            android:textColor="#828282"
            android:textSize="@dimen/text_h5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/NameTitle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/edit_button"
                android:drawablePadding="10dp"
                android:drawableTint="#C2CECE"
                android:hint="@string/nguyen_van_a"
                android:inputType="text"
                android:paddingRight="@dimen/padding_small"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/whiteedt"
                android:textColorLink="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/PhoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ProfileName"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/phone_number"
            android:textColor="#828282"
            android:textSize="@dimen/text_h5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ProfilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/PhoneTitle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneField"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:drawableEnd="@drawable/edit_button"
                android:drawablePadding="10dp"
                android:drawableTint="#C2CECE"
                android:hint="@string/_0999"
                android:inputType="text"
                android:paddingRight="@dimen/padding_small"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/whiteedt"
                android:textColorLink="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/EmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ProfilePhone"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/email"
            android:textColor="#828282"
            android:textSize="@dimen/text_h5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmailTitle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:drawableEnd="@drawable/edit_button"
                android:drawablePadding="10dp"
                android:drawableTint="#C2CECE"
                android:hint="@string/_21520756_gm_uit_edu_vn"
                android:inputType="text"
                android:paddingRight="@dimen/padding_small"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/whiteedt"
                android:textColorLink="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/LanguageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ProfileEmail"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/language"
            android:textColor="#828282"
            android:textSize="@dimen/text_h5" />

        <Spinner
            android:id="@+id/sn_language_customer"
            style="@style/SpinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LanguageTitle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:popupBackground="@drawable/spinner_background"
            android:popupTheme="@style/AppTheme.PopupOverlay" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changepassword_button"
            style="@style/WhiteLogoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/logout_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="-10dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/change_password"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_button"
            style="@style/WhiteLogoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/logout"
            android:textColor="@color/red" />
    </RelativeLayout>
</ScrollView>