<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_marginTop="45dp"
            android:layout_marginStart="30dp"
            android:scaleX="1.2"
            android:scaleY="1.2"/>

        <TextView
            android:id="@+id/TermAndConditionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/msg_terms_and_conditions"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/lightdark"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:textSize="28sp"
            style="@style/headerText"/>

        <TextView
            android:id="@+id/editTitle"
            android:layout_below="@+id/TermAndConditionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_last_edited_20_april_2024"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/lightdark"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            style="@style/headerText"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTitle"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/terms_of_use_text"/>

    </RelativeLayout>
</ScrollView>
