<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".GetStarted.GetStartedSecond">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ELEME-ME-ME-LEME!"
        android:fontFamily="@font/lato_bold"
        android:textFontWeight="900"
        android:textSize="30dp"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_background"
        android:paddingStart="25dp"
        android:paddingTop="30dp"
        android:paddingBottom="60dp"
        android:paddingEnd="25dp">

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_happy_meals"
            android:gravity="start"
            android:textColor="@color/lightdark"
            android:textSize="40dp"
            android:textFontWeight="900"
            android:fontFamily="@font/lato_bold"
            />

        <TextView
            android:id="@+id/descripsion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/darkbg"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:text="@string/msg_order_from_your_favourite_restaurants_and_takeaways_within_the_matter_of_seconds"
            android:layout_below="@+id/sub_title"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getstartedbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/msg_get_started"
            android:layout_below="@+id/descripsion"
            style="@style/PrimaryButton"/>
    </RelativeLayout>
</RelativeLayout>
